--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tailwind-variants": "^0.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -50,7 +53,9 @@
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.1.3"
   },
   "overrides": {
